--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 <body>
   <div id="game_grid">
     <div class="card">
-      <img id="img1" class="front_face" src="001.png" alt="">
+      <img id="img1" class="front_face" src="001.jpeg" alt="">
       <img class="back_face" src="back.webp" alt="">
     </div>
     <div class="card">
-      <img id="img2" class="front_face" src="002.png" alt="">
+      <img id="img2" class="front_face" src="002.jpeg" alt="">
       <img class="back_face" src="back.webp" alt="">
     </div>
     <div class="card">
-      <img id="img3" class="front_face" src="003.png" alt="">
+      <img id="img3" class="front_face" src="003.jpeg" alt="">
       <img class="back_face" src="back.webp" alt="">
     </div>
     <div class="card">
-      <img id="img4" class="front_face" src="001.png" alt="">
+      <img id="img4" class="front_face" src="001.jpeg" alt="">
       <img class="back_face" src="back.webp" alt="">
     </div>
     <div class="card">
-      <img id="img5" class="front_face" src="002.png" alt="">
+      <img id="img5" class="front_face" src="002.jpeg" alt="">
       <img class="back_face" src="back.webp" alt="">
     </div>
     <div class="card">
