--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p id="clicks">Clicks: 0</p>
                 <p id="pairs_left">Pairs left: 6</p>
                 <p id="pairs_matched">Pairs matched: 0</p>
-                <p id="total_pairs">Total pairs: 6</p>
+                <p id="total_pairs">Total pairs: </p>
                 <p id="game_timer">Time: 00:00</p>
                 </div>
             </div>
