Implement power-up logic

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                     <button id="start_button" class="btn btn-primary blue-button">Start</button>
                     <button id="reset_button" class="btn btn-primary blue-button">Reset</button>
                     <button id="dark_theme_button" class="btn btn-primary">Dark Theme</button>
+                    <button id="power_up_button" class="btn btn-primary">Power Up</button>
+
                 </div>
                 </div>
             </div>
