--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <p id="pairs_left">Pairs left: 6</p>
                 <p id="pairs_matched">Pairs matched: 0</p>
                 <p id="total_pairs">Total pairs: </p>
+                <p id="max_time">Max Time: </p>
                 <p id="game_timer">Time: 00:00</p>
                 </div>
             </div>
