Change reset button to link back to index.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <p id="pairs_left">Pairs left: 6</p>
                 <p id="pairs_matched">Pairs matched: 0</p>
                 <p id="total_pairs">Total pairs: </p>
-                <p id="max_time">Max Time: </p>
-                <p id="game_timer">Time: 00:00</p>
+                <p id="max_time">Max time: </p>
+                <p id="game_timer">Time passed: 00:00</p>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -41,7 +41,7 @@
                     <button id="start_button" class="btn btn-primary blue-button">Start</button>
                     <button id="reset_button" class="btn btn-primary blue-button">Reset</button>
                     <button id="dark_theme_button" class="btn btn-primary">Dark Theme</button>
-                    <button id="power_up_button" class="btn btn-primary">Power Up</button>
+                    <button id="power_up_button" class="btn btn-primary">Power Up!</button>
 
                 </div>
                 </div>
